[gd_scene load_steps=23 format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" uid="uid://d3s8yxuvpmekm" path="res://addons/PlayerCharacter/Scripts/StateMachine/PlayerCharacterScript.gd" id="1_834nb"]
[ext_resource type="Script" uid="uid://sca7ypsol83f" path="res://addons/PlayerCharacter/Scripts/StateMachine/StateMachineScript.gd" id="2_834nb"]
[ext_resource type="Script" uid="uid://b0fbr48rbvn27" path="res://addons/PlayerCharacter/Scripts/Camera/CameraScript.gd" id="2_x12n0"]
[ext_resource type="Script" uid="uid://cnpa03x4ajc8b" path="res://addons/PlayerCharacter/Scripts/Misc/LinkComponentScript.gd" id="3_7xxc0"]
[ext_resource type="Script" uid="uid://stil4xkf3tk0" path="res://addons/PlayerCharacter/Scripts/StateMachine/IdleStateScript.gd" id="3_ca0qr"]
[ext_resource type="Script" uid="uid://k7djd8c1xge2" path="res://addons/Weapons/Scripts/Camera/CameraRecoilHolderScript.gd" id="3_yq2k1"]
[ext_resource type="Script" uid="uid://blt7dest23fk0" path="res://addons/PlayerCharacter/Scripts/StateMachine/WalkStateScript.gd" id="4_44cit"]
[ext_resource type="Script" uid="uid://5gk47o641xgt" path="res://addons/PlayerCharacter/Scripts/StateMachine/RunStateScript.gd" id="5_xvqhe"]
[ext_resource type="Script" uid="uid://dvu58wf01wils" path="res://addons/PlayerCharacter/Scripts/StateMachine/JumpStateScript.gd" id="6_2jo4v"]
[ext_resource type="Script" uid="uid://bh3rdvokmrar1" path="res://addons/PlayerCharacter/Scripts/StateMachine/InairStateScript.gd" id="7_g2qap"]
[ext_resource type="Script" uid="uid://bhoqhv7escpyx" path="res://addons/PlayerCharacter/Scripts/StateMachine/CrouchStateScript.gd" id="8_2aixa"]
[ext_resource type="Material" uid="uid://f3f1s20quvcb" path="res://addons/PlayerCharacter/Materials/PlayerCharacterMaterial.tres" id="25_8ryj3"]
[ext_resource type="Texture2D" uid="uid://jwucel52ti1u" path="res://addons/Weapons/Images/Crosshair.png" id="28_msp70"]
[ext_resource type="Script" uid="uid://dx02l6p6behb8" path="res://addons/PlayerCharacter/Scripts/UI/HUDScript.gd" id="102_xvqhe"]
[ext_resource type="Script" uid="uid://ba0b0ekmy1qub" path="res://addons/PlayerCharacter/Scripts/Camera/ViewportCameraScript.gd" id="104_ca0qr"]
[ext_resource type="FontFile" uid="uid://bwr73i28ligrq" path="res://addons/Arts/Fonts/Ticketing.ttf" id="104_g2qap"]

[sub_resource type="Curve" id="Curve_b3kaq"]
_limits = [8.0, 20.0, 0.0, 60.0]
_data = [Vector2(0, 8), 0.0, 0.0, 0, 0, Vector2(60, 20), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_8ryj3"]
_limits = [8.0, 20.0, 0.0, 30.0]
_data = [Vector2(0, 8), 0.0, 0.0, 0, 0, Vector2(30, 20), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yjma"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p2iaj"]

[sub_resource type="LabelSettings" id="LabelSettings_32qq7"]
line_spacing = 5.0
font = ExtResource("104_g2qap")
font_size = 30
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y4xnc"]
line_spacing = 5.0
font = ExtResource("104_g2qap")
font_size = 30
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="PlayerCharacter" type="CharacterBody3D" groups=["PlayerCharacter"]]
collision_layer = 2
collision_mask = 97
floor_block_on_wall = false
floor_max_angle = 1.309
floor_snap_length = 0.0
platform_floor_layers = 4278190081
script = ExtResource("1_834nb")
desiredMoveSpeedCurve = SubResource("Curve_b3kaq")
maxSpeed = 20.0
inAirMoveSpeedCurve = SubResource("Curve_8ryj3")
baseHitboxHeight = 2.0
baseModelHeight = 1.0
heightChangeSpeed = 10.0
crouchSpeed = 6.0
crouchAccel = 9.0
crouchDeccel = 8.0
continiousCrouch = true
crouchHitboxHeight = 1.2
crouchModelHeight = 0.6
walkSpeed = 8.0
walkAccel = 10.0
walkDeccel = 9.0
runSpeed = 11.0
runAccel = 8.0
runDeccel = 7.0
continiousRun = true
jumpHeight = 1.6
jumpTimeToPeak = 0.3
jumpTimeToFall = 0.25
jumpCooldown = 0.2
coyoteJumpCooldown = 0.2
moveForwardAction = "forward"
moveBackwardAction = "backward"
moveLeftAction = "left"
moveRightAction = "right"
runAction = "sprint"
crouchAction = "crouch"
jumpAction = "jump"

[node name="LinkComponent" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_7xxc0")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
unique_name_in_owner = true
script = ExtResource("2_834nb")
initialState = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("3_ca0qr")
metadata/_custom_type_script = "uid://stil4xkf3tk0"

[node name="CrouchState" type="Node" parent="StateMachine"]
script = ExtResource("8_2aixa")
metadata/_custom_type_script = "uid://bhoqhv7escpyx"

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("4_44cit")
metadata/_custom_type_script = "uid://blt7dest23fk0"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("5_xvqhe")
metadata/_custom_type_script = "uid://5gk47o641xgt"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("6_2jo4v")
metadata/_custom_type_script = "uid://dvu58wf01wils"

[node name="InairState" type="Node" parent="StateMachine"]
script = ExtResource("7_g2qap")
metadata/_custom_type_script = "uid://bh3rdvokmrar1"

[node name="CameraHolder" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.540581, 0)
script = ExtResource("2_x12n0")
XAxisSens = 0.12
YAxisSens = 0.12
maxUpAngleView = -90.0
maxDownAngleView = 90.0
baseCameraLerpSpeed = 8.0
crouchCameraLerpSpeed = 8.0
crouchCameraDepth = -0.4
bobFrequency = 0.9
bobAmplitude = 0.1
tiltRotationValue = 0.4
tiltRotationSpeed = 2.0
inAirTiltValDivider = 1.9
mouseModeAction = "mouseMode"

[node name="CameraRecoilHolder" type="Node3D" parent="CameraHolder"]
unique_name_in_owner = true
script = ExtResource("3_yq2k1")

[node name="Camera" type="Camera3D" parent="CameraHolder/CameraRecoilHolder"]
unique_name_in_owner = true
cull_mask = 1
current = true
fov = 90.0
near = 0.01
far = 1000.0

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="Model" type="MeshInstance3D" parent="."]
layers = 2
material_override = ExtResource("25_8ryj3")
mesh = SubResource("CapsuleMesh_p2iaj")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 68

[node name="standingHitbox2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="Raycasts" type="Node3D" parent="."]

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.758088, 0)
exclude_parent = false
target_position = Vector3(0, 4, 0)
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="FloorCheck" type="RayCast3D" parent="Raycasts"]
exclude_parent = false
target_position = Vector3(0, -4, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 0.956863, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ViewportCam" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.540581, 0)
cull_mask = 4
fov = 90.0
near = 0.01
script = ExtResource("104_ca0qr")

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("102_xvqhe")
metadata/_edit_use_anchors_ = true

[node name="PlayerCharacterInfos" type="HBoxContainer" parent="HUD"]
offset_left = 6.0
offset_top = 9.0
offset_right = 621.0
offset_bottom = 175.0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PlayerCharacterInfos"]
layout_mode = 2

[node name="CurrStateLabel" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Current state :"
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="CurrDirectionLabel" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Current direction :"
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="DesiredMoveSpeedLabel" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Desired move speed :"
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="VelocityLabel" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Velocity :"
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="NbJumpsInAirAllowedLabel" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Nb jumps in air allowed : "
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/PlayerCharacterInfos"]
layout_mode = 2

[node name="CurrStateLabelText" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="CurrDirectionLabelText" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="DesiredMoveSpeedLabelText" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="VelocityLabelText" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="NbJumpsInAirAllowedLabelText" type="Label" parent="HUD/PlayerCharacterInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="WeaponsInfos" type="HBoxContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -103.0
offset_right = 552.0
offset_bottom = 29.0
grow_vertical = 0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/WeaponsInfos"]
layout_mode = 2

[node name="WeaponStackLabel" type="Label" parent="HUD/WeaponsInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Weapon stack :"
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="WeaponNameLabel" type="Label" parent="HUD/WeaponsInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Weapon name :"
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="TotalAmmoInMagLabel" type="Label" parent="HUD/WeaponsInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Total ammo in mag : "
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="TotalAmmoLabel" type="Label" parent="HUD/WeaponsInfos/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Total ammo : "
label_settings = SubResource("LabelSettings_32qq7")
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/WeaponsInfos"]
layout_mode = 2

[node name="WeaponStackLabelText" type="Label" parent="HUD/WeaponsInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="WeaponNameLabelText" type="Label" parent="HUD/WeaponsInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="TotalAmmoInMagLabelText" type="Label" parent="HUD/WeaponsInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="TotalAmmoLabelText" type="Label" parent="HUD/WeaponsInfos/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_y4xnc")
vertical_alignment = 1

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("28_msp70")
expand_mode = 1
